crates/java-syntax/tests/snapshots/parser_snapshots__parse_class_literal.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void test() {
        Test.class;
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "test"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
IDENTIFIER "Test"
DOT "."
CLASS_KW "class"
SEMICOLON ";"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..59
  CLASS_DECL@0..58
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..58
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      METHOD_DECL@17..56
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "test"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        BLOCK@29..56
          L_BRACE@29..30 "{"
          WHITESPACE@30..39 "\n        "
          EXPRESSION_STMT@39..50
            CLASS_LITERAL@39..49
              LITERAL@39..43
                IDENTIFIER@39..43 "Test"
              DOT@43..44 "."
              CLASS_KW@44..49 "class"
            SEMICOLON@49..50 ";"
          WHITESPACE@50..55 "\n    "
          R_BRACE@55..56 "}"
      WHITESPACE@56..57 "\n"
      R_BRACE@57..58 "}"
  WHITESPACE@58..59 "\n"
