crates/java-syntax/tests/snapshots/parser_snapshots__parse_class_with_instance_initializer.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { {} }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..14
  CLASS_DECL@0..14
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..14
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      INSTANCE_INITIALIZER@10..12
        BLOCK@10..12
          L_BRACE@10..11 "{"
          R_BRACE@11..12 "}"
      WHITESPACE@12..13 " "
      R_BRACE@13..14 "}"
