crates/java-syntax/tests/snapshots/parser_snapshots__parse_class_with_method.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { void f() {} }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "f"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..23
  CLASS_DECL@0..23
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..23
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      METHOD_DECL@10..21
        VOID_KW@10..14 "void"
        WHITESPACE@14..15 " "
        IDENTIFIER@15..16 "f"
        FORMAL_PARAMETERS@16..18
          L_PAREN@16..17 "("
          R_PAREN@17..18 ")"
        WHITESPACE@18..19 " "
        BLOCK@19..21
          L_BRACE@19..20 "{"
          R_BRACE@20..21 "}"
      WHITESPACE@21..22 " "
      R_BRACE@22..23 "}"
