crates/java-syntax/tests/snapshots/parser_snapshots__parse_class_with_multi_field.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { int a, b; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "a"
COMMA ","
WHITESPACE " "
IDENTIFIER "b"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..21
  CLASS_DECL@0..21
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..21
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      FIELD_DECL@10..19
        TYPE@10..13
          INT_KW@10..13 "int"
        WHITESPACE@13..14 " "
        VARIABLE_DECLARATOR_LIST@14..18
          VARIABLE_DECLARATOR@14..15
            IDENTIFIER@14..15 "a"
          COMMA@15..16 ","
          WHITESPACE@16..17 " "
          VARIABLE_DECLARATOR@17..18
            IDENTIFIER@17..18 "b"
        SEMICOLON@18..19 ";"
      WHITESPACE@19..20 " "
      R_BRACE@20..21 "}"
