crates/java-syntax/tests/snapshots/parser_snapshots__parse_class_with_multi_initialized_field.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { int a = 1, b = 2; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "a"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "1"
COMMA ","
WHITESPACE " "
IDENTIFIER "b"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "2"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..29
  CLASS_DECL@0..29
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..29
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      FIELD_DECL@10..27
        TYPE@10..13
          INT_KW@10..13 "int"
        WHITESPACE@13..14 " "
        VARIABLE_DECLARATOR_LIST@14..26
          VARIABLE_DECLARATOR@14..19
            IDENTIFIER@14..15 "a"
            WHITESPACE@15..16 " "
            EQUAL@16..17 "="
            WHITESPACE@17..18 " "
            LITERAL@18..19
              INTEGER_LITERAL@18..19 "1"
          COMMA@19..20 ","
          WHITESPACE@20..21 " "
          VARIABLE_DECLARATOR@21..26
            IDENTIFIER@21..22 "b"
            WHITESPACE@22..23 " "
            EQUAL@23..24 "="
            WHITESPACE@24..25 " "
            LITERAL@25..26
              INTEGER_LITERAL@25..26 "2"
        SEMICOLON@26..27 ";"
      WHITESPACE@27..28 " "
      R_BRACE@28..29 "}"
