crates/java-syntax/tests/snapshots/parser_snapshots__parse_class_with_static_initializer.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { static {} }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
STATIC_KW "static"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..21
  CLASS_DECL@0..21
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..21
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      STATIC_INITIALIZER@10..19
        STATIC_KW@10..16 "static"
        WHITESPACE@16..17 " "
        BLOCK@17..19
          L_BRACE@17..18 "{"
          R_BRACE@18..19 "}"
      WHITESPACE@19..20 " "
      R_BRACE@20..21 "}"
