crates/java-syntax/tests/snapshots/parser_snapshots__parse_class_with_typed_method.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { int f() {} }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "f"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..22
  CLASS_DECL@0..22
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..22
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      METHOD_DECL@10..20
        TYPE@10..13
          INT_KW@10..13 "int"
        WHITESPACE@13..14 " "
        IDENTIFIER@14..15 "f"
        FORMAL_PARAMETERS@15..17
          L_PAREN@15..16 "("
          R_PAREN@16..17 ")"
        WHITESPACE@17..18 " "
        BLOCK@18..20
          L_BRACE@18..19 "{"
          R_BRACE@19..20 "}"
      WHITESPACE@20..21 " "
      R_BRACE@21..22 "}"
